--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+
+section.pricing {
+  background: #64c71d;
+  background: linear-gradient(to right, #0062E6, #33AEFF);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pricing .card {
+  border: none;
+  border-radius: 1rem;
+  
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.pricing hr {
+  margin: 1.5rem 0;
+}
+
+.pricing .card-title {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+}
+#text{
+  font-size: larger
+  ;
+}
+
+.pricing .card-price {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.pricing .card-price .period {
+  font-size: 0.8rem;
+}
+
+.pricing ul li {
+  margin-bottom: 1rem;
+}
+
+.pricing .text-muted {
+  opacity: 0.7;
+}
+
+.pricing .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  opacity: 0.7;
+  transition: all 0.2s;
+}
+
+/* Hover Effects on Card */
+
+
+  .pricing .card:hover .btn {
+    opacity: 1;
   }
-}
+  div.section{
+    background-color: #0062E6;
+    height: 600px;
+    align-content: flex-end;
+    margin: 22px 52px;
+ 
+};
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
+div.container{
+    margin-top: 800px;
+    
 }
+div.card.mb-6.mb-lg-4{
+   margin: 70px 10px 0px 10px;
+ width: auto;
+ height: auto;
+   border-radius: 20px;
+   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+   
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+div.card-body{
+font-size: 17px;
+
 }
